--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.3",
+    "serialize-javascript": "^2.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -45,6 +46,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.4.5"
   }
 }
