--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
-    "rxjs": "~6.5.3",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "serialize-javascript": "^2.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
